Updated form views

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -8,19 +8,10 @@
     <%= f.text_area :instructions, :rows => 4, :cols => 50 %>
   </p>
 
-  <h3>Ingredients</h3>
   <p>
-    <%= f.label :ingredient %>
-    <input name="recipe[recipe_ingredient][1][ingredient_name]">
-    <%= f.label :quantity %>
-    <input name="recipe[recipe_ingredient][1][quantity]">
-    <%= f.label :unit %>
-    <input name="recipe[recipe_ingredient][1][unit]">
-  </p>
-  <p>
-    <input name="recipe[recipe_ingredient][2][ingredient_name]">
-    <input name="recipe[recipe_ingredient][2][quantity]">
-    <input name="recipe[recipe_ingredient][2][unit]">
+    <%= f.fields_for :recipe_ingredients do |ingredients_form| %>
+      <%= render "ingredients", :f => ingredients_form %>
+    <% end %>
   </p>
 
   <p>
