--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,13 +1,27 @@
-<h1>Recipes</h1>
+<p id="notice"><%= notice %></p>
+
+<h1>Listing Recipes</h1>
 
 <table>
-  <tr>
-    <th>Name</th>
-  </tr>
-
-  <% @recipes.each do |recipe| %>
+  <thead>
     <tr>
-      <td><%= recipe.name %></td>
+      <th>Name</th>
+      <th colspan="1"></th>
     </tr>
-  <% end %>
+  </thead>
+
+  <tbody>
+    <% @recipes.each do |recipe| %>
+      <tr>
+        <td><%= recipe.name %></td>
+        <td><%= link_to 'Show', recipe %></td>
+        <td><%= link_to 'Edit', edit_recipe_path(recipe) %></td>
+        <td><%= link_to 'Destroy', recipe, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
+
+<br>
+
+<%= link_to 'New Recipe', new_recipe_path %>
