--- a/app/views/recipes/_ingredients.html.erb
+++ b/app/views/recipes/_ingredients.html.erb
@@ -1,18 +1,28 @@
 <h3>Ingredients</h3>
 
-<% @recipe.recipe_ingredients.each_with_index do |recipe_ingredient, i| %>
-  <p>
-    <%= fields_for :recipe_ingredients, recipe_ingredient do |fq| %>
+<table>
+  <thead>
+    <tr>
+      <th></th>
+      <th>Ingredient</th>
+      <th>Quantity</th>
+      <th>Unit</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
-      <%= fq.label :ingredient %>
-      <%= text_field_tag "recipe[recipe_ingredient][#{i}][ingredient_name]", recipe_ingredient.ingredient.name %>
-
-      <%= fq.label :quantity %>
-      <%= fq.text_field :quantity, :name => "recipe[recipe_ingredient][#{i}][quantity]" %>
-
-      <%= fq.label :unit %>
-      <%= fq.text_field :unit, :name => "recipe[recipe_ingredient][#{i}][unit]" %>
-
+  <tbody>
+    <% @recipe.recipe_ingredients.each_with_index do |recipe_ingredient, i| %>
+      <%= fields_for :recipe_ingredients, recipe_ingredient do |fq| %>
+        <tr>
+          <td><%= hidden_field_tag "recipe[recipe_ingredients][][id]", recipe_ingredient.id %></td>
+          <td><%= text_field_tag "recipe[recipe_ingredients][][ingredient_name]", recipe_ingredient.ingredient_name %></td>
+          <td><%= fq.text_field :quantity, :name => "recipe[recipe_ingredients][][quantity]" %></td>
+          <td><%= fq.text_field :unit, :name => "recipe[recipe_ingredients][][unit]" %></td>
+          <td><%= check_box_tag "recipe[recipe_ingredients][][delete]" %></td>
+          <td><%= fq.label :delete, 'delete' %></td>
+        </tr>
+      <% end %>
     <% end %>
-  </p>
-<% end %>
+  </tbody>
+</table>
