--- a/app/views/recipes/_ingredients.html.erb
+++ b/app/views/recipes/_ingredients.html.erb
@@ -1,10 +1,10 @@
 <h3>Ingredients</h3>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th></th>
-      <th>Ingredient</th>
+      <th>Name</th>
       <th>Quantity</th>
       <th>Unit</th>
       <th colspan="3"></th>
