--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,12 +1,10 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Recipes</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
-      <th colspan="1"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
