--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -38,5 +38,7 @@
   <%= render "comments/form" %>
 </p>
 
-<%= link_to 'Edit', edit_recipe_path(@recipe) %> |
+<% if @recipe.user == current_user %>
+  <%= link_to 'Edit', edit_recipe_path(@recipe) %> |
+<% end %>
 <%= link_to 'Back', recipes_path %>
