Added nested comments functionality

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -7,8 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Quantity</th>
-      <th>Unit</th>
-      <th colspan="3"></th>
+      <th colspan="3">Unit</th>
     </tr>
   </thead>
 
@@ -29,16 +28,16 @@
 </p>
 
 <p>
-  <h3>Comments</h3>
-  <%= render @recipe.comments %>
+  <br />
+  <% if @recipe.user == current_user %>
+    <%= link_to 'Edit', edit_recipe_path(@recipe) %> |
+  <% end %>
+  <%= link_to 'Back', recipes_path %>
+  <br />
 </p>
 
 <p>
-  <h3>Add a Comment:</h3>
-  <%= render "comments/form" %>
+  <h3>Comments</h3><br />
+  <%= button_to "Add comment", new_recipe_comment_path(@recipe), method: :get, class: 'btn btn-outline-success btn-sm' %><br />
+  <%= render @recipe.comments %>
 </p>
-
-<% if @recipe.user == current_user %>
-  <%= link_to 'Edit', edit_recipe_path(@recipe) %> |
-<% end %>
-<%= link_to 'Back', recipes_path %>
