--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,9 +1,8 @@
-<%= form_for([@recipe, @recipe.comments.build]) do |f| %>
+<%= form_for [@recipe, @comment] do |f| %>
   <p>
-    <%= f.label :body %><br />
     <%= f.text_area :body, :rows => 2, :cols => 40 %>
   </p>
   <p>
-    <%= f.submit "Add Comment", class: 'btn btn-primary' %>
+    <%= f.submit "Save Comment", class: 'btn btn-primary' %>
   </p>
 <% end %>
