Added display of validation errors

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,2 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.field_with_errors input, .field_with_errors textarea {
+  border: thin solid red;
+}
