Added scope functionality and cleanup

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -11,19 +11,26 @@
   </thead>
 
   <tbody>
-    <% @recipes.each do |recipe| %>
-      <tr>
-        <td><%= recipe.name %></td>
-        <td><%= link_to 'Show', recipe %></td>
-        <% if recipe.user == current_user %>
-          <td><%= link_to 'Edit', edit_recipe_path(recipe) %></td>
-          <td><%= link_to 'Delete', recipe, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% else %>
-          <td></td>
-          <td></td>
-        <% end %>
-      </tr>
-    <% end %>
+    <%= render @recipes %>
+  </tbody>
+</table>
+
+<br>
+
+<h2>Quick Meals</h2>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th></th>
+      <th></th>
+      <th colspan="4"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <%= render @recipes.quick_meals %>
   </tbody>
 </table>
 
