Added Duration field to show and form views

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -29,6 +29,11 @@
   </p>
 
   <p>
+    <%= f.label :duration %><br />
+    <%= f.text_field :duration %>
+  </p>
+
+  <p>
     <%= f.submit "Save Recipe", class: 'btn btn-primary' %>
   </p>
 <% end %>
